# django-oauth2-capture

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MANUFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: copywriter_subagent.md  coverage_subagent.md  guilfoyle-subagent.md
.claude/commands/: catchmeup.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  publish.yml
boom/: __init__.py  admin.py  apps.py  urls.py  views.py
boom/migrations/: 0001_initial.py  0002_oauthtoken_profile_json.py  0003_remove_oauthtoken_issued_at_and_more.py  0004_remove_oauthtoken_expires_in_and_more.py  0005_oauthtoken_name.py  0006_oauthtoken_slug_alter_oauthtoken_owner.py  __init__.py
boom/services/: oauth2.py
boom/templates/boom/: callback_success.html  oauthtoken_confirm_delete.html  oauthtoken_list.html
development/: CHANGELOG.md  env.sample  manage.py
development/demo/: __init__.py  admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
development/demo/templates/: demo.html  reauth_needed.html
development/development/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
development/templates/: base.html  index.html
docs/: linkedin-setup.md  release-management.md  youtube-setup.md
oauth2_capture/: CHANGELOG.md  __init__.py  admin.py  apps.py  exceptions.py  models.py  urls.py  views.py
oauth2_capture/migrations/: 0001_initial.py  0002_alter_oauthtoken_access_token.py  __init__.py
oauth2_capture/services/: oauth2.py
oauth2_capture/templates/: base.html
oauth2_capture/templates/oauth2_capture/: callback_success.html  oauthtoken_confirm_delete.html  oauthtoken_list.html
oauth2_capture/tests/: test_token_refresh.py  test_views.py
oauth2_capture/tests/services/oauth2/: test_retry_with_backoff.py
tasks/: README.md
tasks/documentation/: 01-reauth-flow-documentation.md  02-provider-setup-docs.md  03-usage-examples.md
tasks/enhancements/: 01-google-oauth-provider.md  02-token-encryption.md  03-admin-interface-improvements.md
tasks/security/: 01-oauth-state-verification.md  02-token-refresh-error-handling.md  03-token-validation-helpers.md  04-better-error-responses.md
tasks/testing/: 01-core-oauth-flow-tests.md  02-provider-specific-tests.md  03-error-scenario-tests.md  04-token-model-tests.md
